--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.gmail.buer2012</groupId>
     <artifactId>coderunner-service</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.1</version>
     <name>coderunner</name>
     <description>Back-end part of project</description>
 
