--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8090
 debug=true
-logging.file.name=/root/coderunner.log
+logging.file.name=coderunner.log
+logging.file.path=/root
 logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
