Changed redirect Uri

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,7 +25,7 @@ spring:
           facebook:
             clientId: 848358615623604
             clientSecret: 2dd7d5366c61894eb4d0b8ae336a685c
-            redirectUri: "{baseUrl}/oauth2/callback/{registrationId}" # Note that facebook now mandates the use of https redirect URIs, so make sure your app supports https in production
+            redirectUri: "https://rue.tcomad.tk/oauth2/callback/{registrationId}" # Note that facebook now mandates the use of https redirect URIs, so make sure your app supports https in production
             scope:
               - email
               - public_profile
