--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
-!**/src/test/**
 
 ### STS ###
 .apt_generated
@@ -29,3 +27,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+/temporary/
+/src/main/resources/application.yaml
