--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <java.version>1.8</java.version>
         <spring.version>5.1.5.RELEASE</spring.version>
+        <aws-sdk.version>1.11.133</aws-sdk.version>
     </properties>
 
     <dependencies>
@@ -93,6 +94,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>${aws-sdk.version}</version>
         </dependency>
 
     </dependencies>
